--- a/example-smart-app/health.html
+++ b/example-smart-app/health.html
@@ -11,7 +11,7 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js'></script>
     <script src='./lib/js/cerner-smart-embeddable-lib-1.0.0.min.js'></script>
 
-    <img src="./src/images/batman.gif" alt="Batman">
-    <p>Healthy!</p>
+    <img src="./src/images/cat.jpg" alt="Cat">
+    <p>Batman has been replaced with a derpy cat.</p>
   </body>
 </html>
