--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -57,6 +57,10 @@
           <td id='bmi'></td>
         </tr>
         <tr>
+          <th>Heart Rate:</th>
+          <td id='heart rate'></td>
+        </tr>
+        <tr>
           <th>Systolic Blood Pressure:</th>
           <td id='systolicbp'></td>
         </tr>
